python_sources = [
  '__init__.py',
  '__init__.pyi',
  'conftest.py',
  'py.typed'
]

py3.install_sources(
  python_sources,
  pure: false,
  subdir: 'skimage'
)

subdir('_shared')
subdir('_vendored')
subdir('color')
subdir('data')
subdir('draw')
subdir('exposure')
subdir('feature')
subdir('filters')
subdir('future')
subdir('graph')
subdir('io')
subdir('measure')
subdir('metrics')
subdir('morphology')
subdir('registration')
subdir('restoration')
subdir('segmentation')
subdir('transform')
subdir('util')
