python_sources = [
  '__init__.py',
  'test_coord.py',
  'test_fast_exp.py',
  'test_geometry.py',
  'test_interpolation.py',
  'test_safe_as_int.py',
  'test_testing.py',
  'test_utils.py',
  'test_version_requirements.py',
  'test_warnings.py',
]

py3.install_sources(
  python_sources,
  pure: false,
  subdir: 'skimage/_shared/tests'
)
