python_sources = [
  '__init__.py',
  'test_basic_features.py',
  'test_blob.py',
  'test_brief.py',
  'test_canny.py',
  'test_cascade.py',
  'test_censure.py',
  'test_corner.py',
  'test_daisy.py',
  'test_haar.py',
  'test_hog.py',
  'test_match.py',
  'test_orb.py',
  'test_peak.py',
  'test_sift.py',
  'test_template.py',
  'test_texture.py',
  'test_util.py',
]

py3.install_sources(
  python_sources,
  pure: false,
  subdir: 'skimage/feature/tests'
)
