python_sources = [
  '__init__.py',
  'test_correlate.py',
  'test_edges.py',
  'test_fft_based.py',
  'test_gabor.py',
  'test_gaussian.py',
  'test_lpi_filter.py',
  'test_median.py',
  'test_ridges.py',
  'test_thresholding.py',
  'test_unsharp_mask.py',
  'test_window.py'
]

py3.install_sources(
  python_sources,
  pure: false,
  subdir: 'skimage/filters/tests'
)
